<resources>
    <string name="app_name">ej4c</string>
    <string name="navigation_drawer_open">Abrir menú de navegación</string>
    <string name="navigation_drawer_close">Cerrar menú de navegación</string>
    <string name="ciudades">Ciudades</string>
    <string name="slideshow">Slideshow</string>
    <string name="gallery">Gallery</string>
    <string name="home">Home</string>
    <string name="imagen_de_la_ciudad">Imagen de la ciudad</string>
    <string name="nombre">Nombre</string>
    <string name="habitantes_0">Habitantes: 0</string>
    <string name="distancia_0_km">Distancia: 0 km</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>